# CAR-Progress-Tracking

./: .gitignore  README.md
Molecular_Generation/: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run  setup.py
Molecular_Generation/backend/: __init__.py  main.py  molecule_svg.py  pipeline_loader.py
Molecular_Generation/config/: config.yaml  endpoints.yaml  generator_production.yaml  pipeline.yaml
Molecular_Generation/data/: structural_alerts.csv
Molecular_Generation/docs/: PIPELINE_MONITORING.md  PRODUCTION_TRAINING.md
Molecular_Generation/frontend/: index.html  package-lock.json  package.json
Molecular_Generation/models/: __init__.py
Molecular_Generation/scripts/: build_oracle_curated_smiles.py  build_reranker_dataset.py  check_scores.py  collect_imitation_data.py  diagnose_pipeline.py  download_chembl_smiles.py  download_data.py  download_structural_alerts.py  eval_curriculum_full_when_ready.sh  eval_generator.py  eval_generator_oracle.py  evaluate_admet.py  evaluate_oracle.py  generate_and_report.py  generate_samples.py  prepare_admet_from_admet_group.py  prepare_clinical_data.py  preprocess_data.py  run_app.py  run_best_of_n_then_eval.sh  run_cond_pretrain_then_rl.sh  run_cond_train_and_monitor.sh  run_demo.py  run_design_and_monitor.py  run_design_stream.py  run_dev.sh  run_full_pipeline.sh  run_generator_pipeline.py  run_generator_pipeline.sh  run_monitor.sh  run_option_b_curriculum.py  run_option_b_full.py  run_option_b_full.sh  run_pipeline.py  run_pipeline_all_solutions.sh  run_pipeline_demo.py  run_pipeline_until_target.py  run_rl_curriculum.sh  (+12 more)
(+126 files in other folders)
